--- a/INSTALL
+++ b/INSTALL
@@ -28,6 +28,6 @@ yum install freeglut-devel.x86_64
 
 For macOS and Windows, these dependencies are bundled in the source code already.
 
-To compile under macOS, build and run the project using Xcode.
-To compile under Windows, build and run the project using Visual Studio in win/
+To compile under macOS, build and run the Xcode project in mac/
+To compile under Windows, build and run the Visual Studio project in win/
 To compile under Linux, execute make and it will output a skycheckers executable.
