--- a/INSTALL
+++ b/INSTALL
@@ -1,23 +1,22 @@
 Sky Checkers relies on the following dependencies:
 
-* SDL 1.2
-* SDL_image 1.2 (1.2.10 is the latest that works properly on macOS)
-* SDL_mixer 1.2
-* SDL_ttf 2.0 (for SDL 1.2)
-* SDL_image 1.2
-* FreeGLUT (for Windows and Linux)
+* SDL2
+* SDL2_image
+* SDL2_mixer
+* SDL2_ttf
+* SDL2_image
 
 On Linux, development libraries for these dependencies may need to first be installed.
 
 Eg: On Ubuntu, I had to execute:
 
-apt-get install libsdl1.2-dev
-apt-get install libsdl-mixer1.2-dev
-apt-get install libsdl-ttf2.0-dev
-apt-get install libsdl-image1.2-dev
-apt-get install freeglut3-dev
+apt-get install libsdl2-dev
+apt-get install libsdl2-mixer-dev
+apt-get install libsdl2-ttf-dev
+apt-get install libsdl2-image-dev
 
 On CentOS, I executed:
+(TODO: I need to update these...)
 
 yum groupinstall 'Development Tools'
 yum install epel-release
