--- a/INSTALL
+++ b/INSTALL
@@ -20,11 +20,10 @@ On CentOS, I executed:
 
 yum groupinstall 'Development Tools'
 yum install epel-release
-yum install SDL-devel.x86_64
-yum install SDL_mixer-devel.x86_64
-yum install SDL_ttf-devel.x86_64
-yum install SDL_image-devel.x86_64
-yum install freeglut-devel.x86_64
+yum install SDL2-devel.x86_64
+yum install SDL2_mixer-devel.x86_64
+yum install SDL2_ttf-devel.x86_64
+yum install SDL2_image-devel.x86_64
 
 For macOS and Windows, these dependencies are bundled in the source code already.
 
