--- a/INSTALL
+++ b/INSTALL
@@ -14,6 +14,7 @@ apt-get install libsdl2-dev
 apt-get install libsdl2-mixer-dev
 apt-get install libsdl2-ttf-dev
 apt-get install libsdl2-image-dev
+apt-get install libglew-dev
 
 On CentOS, I executed:
 
